force-app/main/default/objects/OnboardingItem__c/OnboardingItem__c.object-meta.xml
<CustomObject>
    <label>Learning</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Learning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learnings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>