force-app/main/default/objects/OnboardingItem__c/fields/Intro__c.field-meta.xml
<CustomField>
    <fullName>Intro__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked it will appear in the intro screens in the ios app. If unchecked it will appear only in the &quot;More&quot; section</inlineHelpText>
    <label>Intro</label>
    <type>Checkbox</type>
</CustomField>