force-app/main/default/objects/OnboardingItem__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Clienteling</fullName>
            </value>
            <value>
                <fullName>Client Lists</fullName>
            </value>
            <value>
                <fullName>Client Details</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Find</fullName>
            </value>
            <value>
                <fullName>More</fullName>
            </value>
            <value>
                <fullName>10K Program</fullName>
            </value>
            <value>
                <fullName>Interests</fullName>
            </value>
            <value>
                <fullName>Care Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>