force-app/main/default/objects/OnboardingItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Step__c</columns>
    <columns>Section__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Application__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>