force-app/main/default/objects/OnboardingItem__c/listViews/All_Learning.listView-meta.xml
<ListView>
    <fullName>All_Learning</fullName>
    <columns>Language__c</columns>
    <columns>Section__c</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Description__c</columns>
    <columns>Step__c</columns>
    <columns>Title__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>All Learning</label>
    <language>en_US</language>
</ListView>