force-app/main/default/objects/OnboardingItem__c/listViews/French.listView-meta.xml
<ListView>
    <fullName>French</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Step__c</columns>
    <columns>Section__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>fr</value>
    </filters>
    <label>French</label>
    <language>en_US</language>
</ListView>