force-app/main/default/objects/OnboardingItem__c/listViews/Now_Yours.listView-meta.xml
<ListView>
    <fullName>Now_Yours</fullName>
    <columns>Language__c</columns>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Step__c</columns>
    <columns>Section__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Application__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application__c</field>
        <operation>equals</operation>
        <value>Make It Yours</value>
    </filters>
    <label>Now Yours</label>
</ListView>